--- a/src/main.tex
+++ b/src/main.tex
@@ -1,205 +1,367 @@
-% a mashup of hipstercv, friggeri and twenty cv
-% https://www.latextemplates.com/template/twenty-seconds-resumecv
-% https://www.latextemplates.com/template/friggeri-resume-cv
+% FortySecondsCV LaTeX template
+% Copyright © 2019 René Wirnata <rene.wirnata@pandascience.net>
+% Licensed under the 3-Clause BSD License. See LICENSE file for details.
+%
+% Attributions
+% ------------
+% * fortysecondscv is based on the twentysecondcv class by Carmine Spagnuolo
+%   (cspagnuolo@unisa.it), released under the MIT license and available under
+%   https://github.com/spagnuolocarmine/TwentySecondsCurriculumVitae-LaTex
+% * further attributions are indicated immediately before corresponding code
 
-\documentclass[lighthipster]{simplehipstercv}
-% available options are: darkhipster, lighthipster, pastel, allblack, grey, verylight, withoutsidebar
-% withoutsidebar
-\usepackage[utf8]{inputenc}
-\usepackage[default]{raleway}
-\usepackage[margin=1cm, a4paper]{geometry}
+%-------------------------------------------------------------------------------
+%                             ADDITIONAL PACKAGES
+%-------------------------------------------------------------------------------
+\documentclass[
+  a4paper,
+%   showframes,
+   maincolor=cvblue,
+   sectioncolor=cvblue,
+%  subsectioncolor  =orange
+%   sidebarwidth=0.4\paperwidth,
+%   topbottommargin=0.03\paperheight,
+%   leftrightmargin=20pt
+]{fortysecondscv}
+
+% improve word spacing and hyphenation
+\usepackage{microtype}
+\usepackage{ragged2e}
+\usepackage{rotating}
+
+% take care of proper font encoding
+\ifxetex
+	\usepackage{fontspec}
+	\defaultfontfeatures{Ligatures=TeX}
+% \newfontfamily\headingfont[Path = fonts/]{segoeuib.ttf} % local font
+\else
+	\usepackage[utf8]{inputenc}
+	\usepackage[T1]{fontenc}
+% \usepackage[sfdefault]{noto} % use noto google font
+\fi
+
+% enable mathematical syntax for some symbols like \varnothing
+\usepackage{amssymb}
+
+% bubble diagram configuration
+\usepackage{smartdiagram}
+\smartdiagramset{
+  % defaut font size is \large, so adjust to harmonize with sidebar layout
+  bubble center node font = \footnotesize,
+  bubble node font = \footnotesize,
+  % default: 4cm/2.5cm; make minimum diameter relative to sidebar size
+  bubble center node size = 0.3\sidebartextwidth,
+  bubble node size = 0.25\sidebartextwidth,
+  distance center/other bubbles = 1.5em,
+  % set center bubble color
+  bubble center node color = maincolor!70,
+  % define the list of colors usable in the diagram
+  set color list = {maincolor!10, maincolor!40,
+  maincolor!20, maincolor!60, maincolor!35},
+  % sets the opacity at which the bubbles are shown
+  bubble fill opacity = 0.8,
+}
 
 
-%------------------------------------------------------------------ Variablen
+%-------------------------------------------------------------------------------
+%                            PERSONAL INFORMATION
+%-------------------------------------------------------------------------------
+% profile picture
+\cvprofilepic{pics/profile}
+% your name
+\cvname{\LARGE FirstName LastName}
+% job title/career
+%\cvjobtitle{Assistant Professor of\\[0.2em] Robotics Engineering}
+\cvjobtitle{Senior XXXXX XXXXX at\\[0.2em] University of Overleaf}
 
-\newlength{\rightcolwidth}
-\newlength{\leftcolwidth}
-\setlength{\leftcolwidth}{0.23\textwidth}
-\setlength{\rightcolwidth}{0.75\textwidth}
+% date of birth
+\cvbirthday{\textbf{Date of Birth}: Sep. X, XXXX}
+% short address/location, use \newline if more than 1 line is required
+\cvaddress{XXXXXXXXX}
+% phone number
+\cvphone{XXXXXXXX}
+% email address
+\cvmail{XXXXXXXX[at]YYYYY[dot]edu}
+% personal website
+\cvsite{\href{https://bit.ly/2JntHee}{\textbf{Google Scholar}: H. El-Hussieny}}
+% pgp key
+\cvkey{ORCID:0000-0002-2296-616X}{XXXX-YYYY-ZZZZ-MMMM} % put your actual ORCID here in the two brackets
+% add additional information
+% \newcommand{\additional}{some more?}
 
-%------------------------------------------------------------------
-\title{New Simple CV}
-\author{\LaTeX{} Ninja}
-\date{June 2019}
 
-\pagestyle{empty}
+%-------------------------------------------------------------------------------
+%                              SIDEBAR 1st PAGE
+%-------------------------------------------------------------------------------
+% overwrite default icons and order of personal information
+% \renewcommand{\personaltable}{%
+% 	\begin{personal}[0.8em]
+% 		\circleicon{\faKey}      & \cvkey  \\
+% 		\circleicon{\faAt}       & \cvmail \\
+% 		\circleicon{\faGlobe}    & \cvsite \\
+% 		\circleicon{\faPhone}    & \cvphone \\
+% 		\circleicon{\faEnvelope} & \cvaddress \\
+% 		\circleicon{\faInfo}     & \cvbirthday \\
+% 		% add another line
+% 		\circleicon{\faQuestion} & \additional
+% 	\end{personal}
+% }
+
+% add more profile sections to sidebar on first page
+\addtofrontsidebar{
+	% include gosquare national flags from https://github.com/gosquared/flags;
+	% naming according to ISO 3166-1 alpha-2 country codes
+	\graphicspath{{pics/flags/}}
+
+% 	\profilesection{Languages}
+% 		\pointskill{\flag{CN.png}}{Chinese}{5}
+% 		\pointskill{\flag{DE.png}}{German}{3}
+%   	\pointskill{\flag{GB.png}}{English}{3}
+%   	\pointskill{\flag{FR.png}}{French}{3}
+
+	\profilesection{Interests}
+		\skill{\faGraduationCap}{Soft Robotics}
+		\skill{\faGraduationCap}{Robotic Teleoperation}
+		\skill{\faGraduationCap}{Human-Robot Interaction}
+		\skill{\faGraduationCap}{Applied Intelligence}
+				\skill{\faGraduationCap}{Embedded Systems Design}
+
+
+	\profilesection{Skills}
+	\chartlabel{Programming:}\\
+		\pointskill{}{ROS, Moveit, Gazebo}{5}
+		\pointskill{}{MATLAB, C++}{5}
+		        \pointskill{}{Unity3D}{4}
+ 		\pointskill{}{Python}{3}
+        \pointskill{}{Bash scripting}{2}
+        	\chartlabel{Tools:}\\
+    	\pointskill{}{OpenCV, PCL}{4}
+		\pointskill{}{TensorFlow}{3}
+		\pointskill{}{Keras}{3}
+	\chartlabel{CAD Tools:}\\
+		\pointskill{}{CATIA}{4}
+		\pointskill{}{MSC ADAMS}{4}
+	\chartlabel{Robot Simulators:}\\
+ 		\pointskill{}{V-REP, Webots}{5}
+	 		\pointskill{}{SOFA}{2}
+
+}
+
+
+%-------------------------------------------------------------------------------
+%                              SIDEBAR 2nd PAGE
+%-------------------------------------------------------------------------------
+\addtobacksidebar{
+	\profilesection{Short Bio}
+	\aboutme{
+ Dan has served on roughly thirty conference and workshop program committees and served as the Program Chair for PLDI 2018. He has served on the ACM SIGPLAN Executive Committee, the Steering Committee for the ACM / IEEE-CS 2013 Computer Science Curriculum, and the ACM Education Board. He currently serves on the CRA Board.}
+
+	\profilesection{Metrics}
+% 	\chartlabel{Bubble Diagram}
+	\begin{figure}\centering
+		\smartdiagram[bubble diagram]{\large
+% 			\textcolor{white}{\textbf{Being a}} \\
+% 			\textcolor{white}{\textbf{Panda}}, % center bubble
+			\textcolor{black!90}{h-index}\\
+			\textcolor{black!90}{\Large 4},
+			\textcolor{black!90}{Citations}\\
+			\textcolor{black!90}{25},
+			\textcolor{black!90}{RG Score}\\
+			\textcolor{black!90}{7.32},
+					\textcolor{black!90}{Publications}\\
+			\textcolor{black!90}{17}
+% 			\textcolor{black!90}{Playing},
+% 			\textcolor{black!90}{Chilling}
+		}
+	\end{figure}
+
+% 	\chartlabel{Wheel Chart}
+
+% 	\wheelchart{4em}{2em}{%
+%   	20/3em/maincolor!50/Chill,
+%   	15/3em/maincolor!15/Play,
+%   	30/4em/maincolor!40/Sleep,
+%   	20/3em/maincolor!20/Eat
+% 	}
+\profilesection{Profiles}
+\centering
+\href{https://www.linkedin.com/in/haithamelhussieny/}{\includegraphics[width=0.2\sidebartextwidth]{in.png}}\quad \href{https://www.researchgate.net/profile/Haitham_El-Hussieny}{\includegraphics[width=0.2\sidebartextwidth]{pics/rg.png}}\quad  \href{https://github.com/elhussieny}{\includegraphics[width=0.2\sidebartextwidth]{github.png}}
+	\profilesection{Languages}
+	\barskill{}{\textbf{Arabic} (Mother Tongue)}{100}
+	\barskill{}{\textbf{English} (iBT:86, 2011)}{80}
+	\barskill{}{\textbf{Japanese} (Intro. course, 2016)}{20}
+
+
+	\profilesection{Personal}
+	\begin{memberships}
+ 		\membership{}{  Dan lives with his partner, a global public-health researcher, their two sons, born December 2013 and September 2015, and, because that clearly isn't enough chaos, a dog born some time in 2017. Prior to becoming a proud and obsessed dad, Dan enjoyed playing (poorly) and watching ice hockey, (road) bicycling, hiking, non-fiction, and enjoying good food, beer, and live theatre. Now he usually manages to read one book a month. }
+ 	%	\membership{}{}
+	\end{memberships}
+
+
+}
+
+\addtothirdsidebar{
+\textbf{}\\
+\begin{turn}{-90}\chartlabel{Continuum Robots}\chartlabel{Growing Robots}\chartlabel{Shared Control}\chartlabel{Learning by Demonstrations}\chartlabel{Eye Gaze}\chartlabel{Mobile Robots}\chartlabel{Human-Robot Interaction}\chartlabel{Optimal Control}\end{turn}
+
+}
+
+%-------------------------------------------------------------------------------
+%                         TABLE ENTRIES RIGHT COLUMN
+%-------------------------------------------------------------------------------
 \begin{document}
+% \sidebarwidth=0\paperwidth
+% \newgeometry{right=1cm,left=1cm,bottom=0.1cm,top=1cm}
+
+% \vskip30pt
+
+% \begin{center}
+%     {\color{cvblue} \Huge Cover Letter}
+% \end{center}
+% \vskip20pt
+
+% {
+% }
 
 
-\thispagestyle{empty}
-%-------------------------------------------------------------
+\newpage
+\restoregeometry
+\sidebarwidth=0.35\paperwidth
+
+\makefrontsidebar
+
+\cvsection{Working Experience}
+\begin{cvtable}
+    \cvitem{Aug, 2019 -- ongoing}{\color{cvsectioncolor}Senior Research Fellow}{\textbf{University of Salford, UK}}{Working as a Senior Research Fellow in Soft Robotics at the University of Salford. Major research area includes control of pneumatic actuators and soft grippers.}
+
+	\cvitem{Sep, 2016 -- ongoing}{\color{cvsectioncolor}Assistant Professor\quad (currently onleave)}{\textbf{Benha Univ., Egypt}}{Assistant Professor of Robotics Engineering at Electrical Engineering Department, Faculty of Engineering (Shoubra), Benha University. }
+
+	\cvitem{Sep, 2018 -- Aug, 2019}{\color{cvsectioncolor}Adjunct Assistant Professor}{\textbf{E-JUST Univ., Egypt}}{Working as an Adjunct Assistant Professor for one day/week at Mechatronics and Robotics Engineering Department, Egypt-Japan University of Science and Technology (E-JUST), Egypt.}
+
+	\cvitem{May, 2017 -- Jun, 2018}{\color{cvsectioncolor}Post-Doc Fellow}{\textbf{KOREATECH Univ., S. Korea}}{Worked on soft haptic for soft robots research and involved in a collaboration project with \href{http://charm.stanford.edu/}{CHARM Lab., Stanford University} with title “Human-Centered Design and Control of Vine Robots for Disaster Scenarios".}
+
+	\cvitem{Oct, 2016 -- Feb, 2017}{\color{cvsectioncolor}Adjunct Assistant Professor}{\textbf{Zewail City Univ., Egypt}}{Worked as a part-time Adjunct Assistant Professor at Aerospace Engineering Department for two days/week. Delivering an undergraduate course (SPC 318: System Modeling and Linear Systems).}
+
+	\cvitem{Sep, 2015 -- May, 2016}{\color{cvsectioncolor}Visiting Researcher}{\textbf{NAIST Univ., Japan}}{Conducted experiments with KUKA LWR iiwa R820 robot manipulator and doing research on eye-gaze input interface in HRI applications.}
+
+	\cvitem{Jul, 2008 -- Sep, 2011}{\color{cvsectioncolor}Teaching Assistant}{\textbf{Benha Univ., Egypt}}{Worked as a full-time Teaching Assistant at the Electrical Engineering Department, Faculty of Engineeing (Shoubra), Benha University to help in teaching courses in electronics and robotics subjects.}
+
+	\cvitem{Jul, 2008 -- Sep, 2011}{\color{cvsectioncolor}Embedded Systems Engineer}{\textbf{Egytronix Co., Egypt}}{Worked as a part-time embedded systems engineer (four days/week) in the field of power electronics applications and embedded systems design.}
+\end{cvtable}
 
 
-\simpleheader{headercolour}{Full Stack Developer | Tech Lead | Typescript, Angular, React, NodeJS | AWS}{white}
+\cvsection{Education}
+\subsection{Postgraduate Studies}
+\begin{cvtable}
+	\cvitem{2013 -- 2016}{\color{cvsectioncolor}Ph.D. in Mechatronics and Robotics Engineering}{\href{www.ejust.edu.eg}{\textbf{E-JUST, Egypt}}}
+		{\textbf{Title}: Development of a Cognitive Human-Robot Interaction System for Dexterous Teleoperation.\\
+		\textbf{Supervisors}: Prof. Said Megahed, Dr. Samy Assal, Prof. Ahmed A. Abouelsoud and Prof. Tsukasa Ogasawara.\\
+		\textbf{Grade: }CGPA: 3.78\\
+		\chartlabel{HRI} \chartlabel{Teleoperation} \chartlabel{Shared Control} \chartlabel{Eye Gaze}}
+
+	\cvitem{2011 -- 2013}{\color{cvsectioncolor}M.Sc. in Mechatronics and Robotics Engineering}{\href{www.ejust.edu.eg}{\textbf{E-JUST, Egypt}}}
+		{\textbf{Title}: Improving Robots Exploration by Heuristic Backtracking in Sensor-based Techniques.\\
+		\textbf{Supervisors}: Dr. M. Abdellatif and Dr. Samy Assal\\
+		\textbf{Grade: }CGPA: 3.5\\
+	\chartlabel{Mobile Robots} \chartlabel{Exploration} \chartlabel{Navigation} \chartlabel{Path Planning}}
+\end{cvtable}
 
 
+\subsection{Undergraduate Study}
+\begin{cvtable}
+\cvitem{2002 -- 2007}{\color{cvsectioncolor}\small B.Sc. in Electronics and Communications Engineering}{\href{http://bu.edu.eg/en/}{\textbf{Benha Univ., Egypt}}}
+		{\textbf{Prject Title}: A Mototrized Wheelchair for Handicapped.\\
+		\textbf{Supervisors}: Dr. Asharaf Hafez\\
+		\textbf{Grade: } Very Good (Ranked 3rd. among 200 students)}
+	\end{cvtable}
+
+\subsection{Other Training}
+\begin{cvtable}
+\cvitem{May 2005}{\color{cvsectioncolor}\small Embedded Systems Diploma}{\textbf{Jelecom Co., Egypt}}
+		{Training on microcontrollers: 8051, AVR, PIC and Motorola.}
+	\end{cvtable}
+
+% 	Ph.D. Theses: (Two students)
+% { . (2018 - 2020)
+% {  (2018 - 2020)
+% M.Sc. Theses: (Two students)
+% { An Intutive Input Interface for teloperation of a Multi-section Continuum Robot. (2019-2021)
+% {  (2019-2021)
+\newpage
+\makebacksidebar
+\cvsection{Teaching Experience}
+\subsection{Postgraduate Courses}
+\begin{cvtable}
+	\cvitem{E-JUST University}{MTR 601: Intelligent Control Systems}{Fall'18, Spring'19}{Fuzzy Logic Control, Neural Network Control, Evolutionary Algorithms and Genetic Programming.}
+	\cvitem{Benha University}{ECE 501: Advanced Embedded Systems}{Fall'16}{Micro-controllers and Microprocessors Applications}
+% 	\cvitem{Benha University}{ECE 447: Robotics Engineering}{Spring'17, Spring'19}{Robot Structure, Kinematics, Dynamic and Control.}
+% 	\cvitem{}{ECE 447: Robotics Engineering}{Spring'17, Spring'19}{Robot Structure, Kinematics, Dynamic and Control.}
+\end{cvtable}
+
+\subsection{Undergradute Courses}
+\begin{cvtable}
+\cvitem{Benha University}{ECE 447: Robotics Engineering}{Spring'17, Spring'19}{Robot Structure, Kinematics, Dynamics and Control.}
+\cvitem{}{ECE 101: Electronics (I)}{Fall'16}{Basic of Electronics: PN Junctions, Diode applications.}
+\cvitem{}{ECE 102: Electronics (II)}{Spring'17}{LEDs, Optocouplers, Photodiodes and applications.}
+\cvitem{}{ECE 204: Electrical and Electronic Measurements}{Fall'16, Fall'18}{PMMC, Avometers, Digital Instruments, Sensor and actuators.}
+\cvitem{ZewailCity University}{SPC 318: System Modeling and Linear Systems}{Fall'18}{Transfer function, State-Space, First and Second Order Systems, Stability Analysis and Root Locus.}
+\cvitem{YouTube}{\href{https://www.youtube.com/playlist?list=PL_rxK_FJ4p0agYcYRZwa9mbMUvnhesZ4v}{\textbf{Introduction to \LaTeX\, in Arabic}}}{Since Dec 8, 2014}{}
+	\end{cvtable}
+
+\cvsection{Academic Supervision}
+\begin{cvtable}
+	\cvitem{2018--2020}{\small Demonstration-Guided Motion Planning for Continuum Robots}{Ph.D.}{}
+	\cvitem{2018--2020}{\small Intelligent Control of Automotive Air-Spring Suspension System.}{Ph.D.}{}
+	\cvitem{2019--2020}{\small Intuitive teloperation of Multi-section Continuum Robots.}{M.Sc.}{}
+	\cvitem{2019--2020}{\small Autonomous Tasks-around-head Assistance for Patients with Movement Disabilities}{M.Sc.}{}
+\end{cvtable}
+
+\cvsection{Honours and Awards}
+\begin{cvtable}
+	\cvitem{May 2018}{Award of Research Excellence (10000 EGP)}{Benha Univ., Egypt}{}
+		\cvitem{Jan 2017}{Award of Research Excellence (4000 EGP)}{Benha Univ., Egypt}{}
+		\cvitem{Sep 2011}{Awarded M.Sc. and Ph.D. Scholarships}{MoHE, Egypt}{}
+\end{cvtable}
 
 
-%------------------------------------------------
+\cvsection{Invited Talks}
+\begin{cvtable}
+	\cvitem{Mar 2019}{Entrepreneur Workshop}{E-JUST Univ.}{Gave a two hours lecture on career support and entrepreneurships.}
+		\cvitem{May 2009}{Getting Started in Embedded Systems}{Benha Univ.}{Gave a lecture on getting started in embedded systems.}
+\end{cvtable}
+\section{Review Duties}
+\begin{cvtable}
+	\cvitem{Journals}{Advanced Robotics, Intelligent Service Robots.}{}{}
+	\cvitem{Conferences}{ICRA’17, IROS’18, ICRA’19, ICAR'19.}{}{}
+\end{cvtable}
 
-% this has to be here so the paracols starts..
-\subsection*{}
-\vspace{4em}
+\cvsection{References}
+\begin{cvtable}
+	\cvitem{Ref. 1}{Prof. XXX CCCC}{EE Univ., Egypt}{xxx[dot]yyy[at]ddd[dot]edu[dot]eg}
+			\cvitem{Ref. 2}{Prof. XXX CCCC}{EE Univ., Egypt}{xxx[dot]yyy[at]ddd[dot]edu[dot]eg}
+	\cvitem{Ref. 3}{Prof. XXX CCCC}{EE Univ., Egypt}{xxx[dot]yyy[at]ddd[dot]edu[dot]eg}
 
-\setlength{\columnsep}{1.5cm}
-\columnratio{0.23}[0.75]
-\begin{paracol}{2}
-\hbadness5000
-%\backgroundcolor{c[1]}[rgb]{1,1,0.8} % cream yellow for column-1 %\backgroundcolor{g}[rgb]{0.8,1,1} % \backgroundcolor{l}[rgb]{0,0,0.7} % dark blue for left margin
+\end{cvtable}
 
-\paracolbackgroundoptions
+\newpage
+\makethirdsidebar
+\sidebarwidth=.08\paperwidth
+\newgeometry{right=1cm,left=2cm,bottom=0.1cm,top=1cm}
 
-% 0.9,0.9,0.9 -- 0.8,0.8,0.8
+\cvsection{Publications}
+\subsection{Journals}
+	\begin{itemize}
+	{\small
+	\item mmm}
+\end{itemize}
+\vskip20pt
+ \subsection{Conferences}
+\begin{itemize}
+{\small
+\item ccc}
+		\end{itemize}
+%\end{cvtable}
 
-
-\footnotesize
-{\setasidefontcolour
-\flushright
-\begin{center}
-    \roundpic{hugo.jpg}
-\end{center}
-
-\bg{cvgreen}{white}{About me}\\[0.5em]
-
-{\footnotesize
-I'm a tech lead, full stack developer, and DevOps at Difuze, a media asset management company serving the entertainment industry. With 26 years of experience in web application development across, among others, digital TV, media platforms, laptops, mobiles, and more, I work with various technologies like AWS, Angular, Vue.js, React, PHP, Python, and HTML5.
-
-In my role, I oversee the architecture, development, and deployment of two web projects, including one on Azure, while managing a team of 4 developers and 1 QA. I also contribute to improving our software stack through module creation, code reviews, and adherence to agile best practices. I'm passionate about web innovation, solving complex problems, and delivering scalable, user-friendly solutions.}
-\bigskip
-
-\bg{cvgreen}{white}{personal} \\[0.5em]
-Swimming, reading, movies, international geopolitics, high tech
-
-\bigskip
-
-\bg{cvgreen}{white}{Areas of specialization} \\[0.5em]
-
-Privateering ~•~ Bucaneering ~•~ Parler ~•~ Rum
-
-\bigskip
-
-
-
-\bigskip
-
-\bg{cvgreen}{white}{Interests}\\[0.5em]
-
-\lorem
-\bigskip
-
-\bg{cvgreen}{white}{Interests}\\[0.5em]
-
-\texttt{R} ~/~ \texttt{Android} ~/~ \texttt{Linux}
-
-\texttt{R} ~/~ \texttt{Android} ~/~ \texttt{Linux}
-
-\texttt{R} ~/~ \texttt{Android} ~/~ \texttt{Linux}
-
-\vspace{4em}
-
-{\scriptsize
-\hspace*{-3.4em} \infobubble{\faAt}{cvgreen}{white}{hugo.machefer@gmail.com} \\
-\hspace*{-4.6em} \infobubble{\faLinkedin}{cvgreen}{white}{linkedin.com/in/hugomachefer} \\
-\hspace*{-3.4em} \infobubble{\faGithub}{cvgreen}{white}{https://github.com/hmachefe}
-}
-
-
-
-
-
-\phantom{turn the page}
-
-\phantom{turn the page}
-}
-%-----------------------------------------------------------
-\switchcolumn
-
-\small
-\section*{Short Resumé}
-
-\begin{tabular}{r| p{0.5\textwidth} c}
-    \cvevent{2018--2021}{Captain of the Black Pearl}{Lead}{East Indies \color{cvred}}{Finally got the goddamn ship back.\lorem\lorem\lorem}{disney.png} \\
-    \cvevent{2016--2017}{Captain of the Black Pearl}{Lead}{Tortuga \color{cvred}}{Found a secret treasure, lost the ship. \lorem\lorem}{medal.jpeg}
-\end{tabular}
-\vspace{3em}
-
-\begin{minipage}[t]{0.35\textwidth}
-\section*{Degrees}
-\begin{tabular}{r p{0.6\textwidth} c}
-    \cvdegree{1710}{Captain}{Certified}{Tortuga Uni \color{headerblue}}{}{disney.png} \\
-    \cvdegree{1715}{Bucaneering}{M.A.}{London \color{headerblue}}{}{medal.jpeg} \\
-    \cvdegree{1720}{Bucaneering}{B.A.}{London \color{headerblue}}{}{medal.jpeg}
-\end{tabular}
-\end{minipage}\hfill
-\begin{minipage}[t]{0.3\textwidth}
-\section*{Programming}
-\begin{tabular}{r @{\hspace{0.5em}}l}
-     \bg{skilllabelcolour}{iconcolour}{html, css} &  \barrule{0.4}{0.5em}{cvpurple}\\
-     \bg{skilllabelcolour}{iconcolour}{\LaTeX} & \barrule{0.55}{0.5em}{cvgreen} \\
-     \bg{skilllabelcolour}{iconcolour}{python} & \barrule{0.5}{0.5em}{cvpurple} \\
-     \bg{skilllabelcolour}{iconcolour}{R} & \barrule{0.25}{0.5em}{cvpurple} \\
-     \bg{skilllabelcolour}{iconcolour}{javascript} & \barrule{0.1}{0.5em}{cvpurple} \\
-\end{tabular}
-\end{minipage}
-
-\section*{Curriculum}
-\begin{tabular}{r| p{0.5\textwidth} c}
-    \cvevent{2018--2021}{Captain of the Black Pearl}{Lead}{East Indies \color{cvred}}{Finally got the goddamn ship back. \lorem}{disney.png} \\
-    \cvevent{2019}{Freelance Pirate}{Bucaneering}{Tortuga \color{cvred}}{This and that. The usual, aye?  \lorem}{medal.jpeg} \\
-\end{tabular}
-\vspace{3em}
-
-\begin{minipage}[t]{0.3\textwidth}
-\section*{Certificates \& Grants}
-\begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.55\textwidth}}
-    1708 & Captain's Certificates \\
-    1710 & Travel grant \\
-    1715--1716 & Grant from the Pirate's Company
-\end{tabular}
-\bigskip
-
-\section*{Languages}
-\begin{tabular}{l | ll}
-\textbf{English} & C2 & {\phantom{x}\footnotesize mother tongue} \\
-\textbf{French} & C2 & \pictofraction{\faCircle}{cvgreen}{3}{black!30}{1}{\tiny} \\
-\textbf{Spanish} & C2 & \pictofraction{\faCircle}{cvgreen}{1}{black!30}{3}{\tiny} \\
-\textbf{Italian} & C2 & \pictofraction{\faCircle}{cvgreen}{3}{black!30}{1}{\tiny}
-\end{tabular}
-\bigskip
-
-\end{minipage}\hfill
-\begin{minipage}[t]{0.3\textwidth}
-\section*{Publications}
-\begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.7\textwidth}}
-    1729 & \emph{How I almost got killed by Lady Swan}, Tortuga Printing Press. \\
-    1720 & ``Privateering for Beginners'', in: \emph{The Pragmatic Pirate} (1/1720).
-\end{tabular}
-\bigskip
-
-\section*{Talks}
-\begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.6\textwidth}}
-    Nov. 1726 & ``How I lost my ship (\& and how to get it back)'', at: \emph{Annual Pirate's Conference} in Tortuga, Nov. 1726.
-\end{tabular}
-\end{minipage}
-
-
-
-
-
-
-\vfill{} % Whitespace before final footer
-
-%----------------------------------------------------------------------------------------
-%	FINAL FOOTER
-%----------------------------------------------------------------------------------------
-\setlength{\parindent}{0pt}
-\begin{minipage}[t]{\rightcolwidth}
-\begin{center}\fontfamily{\sfdefault}\selectfont \color{black!70}
-{\small Jack Sparrow \icon{\faEnvelopeO}{cvgreen}{} The Black Pearl \icon{\faMapMarker}{cvgreen}{} Tortuga \icon{\faPhone}{cvgreen}{} 0099/333 5647380 \newline\icon{\faAt}{cvgreen}{} \protect\url{jack@sparrow.com}
-}
-\end{center}
-\end{minipage}
-
-\end{paracol}
+%\cvsignature
 
 \end{document}
