--- a/src/main.tex
+++ b/src/main.tex
@@ -68,23 +68,19 @@
 % profile picture
 \cvprofilepic{pics/profile}
 % your name
-\cvname{\LARGE FirstName LastName}
+\cvname{\LARGE Hugo MACHEFER}
 % job title/career
-%\cvjobtitle{Assistant Professor of\\[0.2em] Robotics Engineering}
-\cvjobtitle{Senior XXXXX XXXXX at\\[0.2em] University of Overleaf}
+\cvjobtitle{Full Stack Developer | Devops | Tech Lead }
 
 % date of birth
-\cvbirthday{\textbf{Date of Birth}: Sep. X, XXXX}
+\cvbirthday{\textbf{Date of Birth}: May. 5, 1974}
 % short address/location, use \newline if more than 1 line is required
-\cvaddress{XXXXXXXXX}
+\cvaddress{5563 avenue de Darlington, H3T1T1 Montréal}
 % phone number
-\cvphone{XXXXXXXX}
+\cvphone{001 514 659 0718}
 % email address
-\cvmail{XXXXXXXX[at]YYYYY[dot]edu}
-% personal website
-\cvsite{\href{https://bit.ly/2JntHee}{\textbf{Google Scholar}: H. El-Hussieny}}
-% pgp key
-\cvkey{ORCID:0000-0002-2296-616X}{XXXX-YYYY-ZZZZ-MMMM} % put your actual ORCID here in the two brackets
+\cvmail{hugo.machefer@gmail.com}
+
 % add additional information
 % \newcommand{\additional}{some more?}
 
@@ -95,9 +91,7 @@
 % overwrite default icons and order of personal information
 % \renewcommand{\personaltable}{%
 % 	\begin{personal}[0.8em]
-% 		\circleicon{\faKey}      & \cvkey  \\
 % 		\circleicon{\faAt}       & \cvmail \\
-% 		\circleicon{\faGlobe}    & \cvsite \\
 % 		\circleicon{\faPhone}    & \cvphone \\
 % 		\circleicon{\faEnvelope} & \cvaddress \\
 % 		\circleicon{\faInfo}     & \cvbirthday \\
@@ -127,8 +121,10 @@
 
 
 	\profilesection{Skills}
-	\chartlabel{Programming:}\\
-		\pointskill{}{ROS, Moveit, Gazebo}{5}
+	\chartlabel{Languages:}\\
+\pointskill{}{JavaScript (ECMA 6++)}{80}
+\pointskill{}{JavaScript (ECMA 6++)}{90}
+\pointskill{}{JavaScript (ECMA 6++)}{100}
 		\pointskill{}{MATLAB, C++}{5}
 		        \pointskill{}{Unity3D}{4}
  		\pointskill{}{Python}{3}
