--- a/src/main.tex
+++ b/src/main.tex
@@ -81,6 +81,8 @@
 % email address
 \cvmail{hugo.machefer@gmail.com}
 
+% pgp key
+\cvkey{ORCID:0000-0002-2296-616X}{XXXX-YYYY-ZZZZ-MMMM} % put your actual ORCID here in the two brackets
 % add additional information
 % \newcommand{\additional}{some more?}
 
@@ -91,6 +93,7 @@
 % overwrite default icons and order of personal information
 % \renewcommand{\personaltable}{%
 % 	\begin{personal}[0.8em]
+% 		\circleicon{\faKey}      & \cvkey  \\
 % 		\circleicon{\faAt}       & \cvmail \\
 % 		\circleicon{\faPhone}    & \cvphone \\
 % 		\circleicon{\faEnvelope} & \cvaddress \\
@@ -122,24 +125,17 @@
 
 	\profilesection{Skills}
 	\chartlabel{Languages:}\\
-\pointskill{}{JavaScript (ECMA 6++)}{80}
-\pointskill{}{JavaScript (ECMA 6++)}{90}
-\pointskill{}{JavaScript (ECMA 6++)}{100}
-		\pointskill{}{MATLAB, C++}{5}
-		        \pointskill{}{Unity3D}{4}
- 		\pointskill{}{Python}{3}
-        \pointskill{}{Bash scripting}{2}
-        	\chartlabel{Tools:}\\
-    	\pointskill{}{OpenCV, PCL}{4}
-		\pointskill{}{TensorFlow}{3}
-		\pointskill{}{Keras}{3}
-	\chartlabel{CAD Tools:}\\
-		\pointskill{}{CATIA}{4}
-		\pointskill{}{MSC ADAMS}{4}
-	\chartlabel{Robot Simulators:}\\
- 		\pointskill{}{V-REP, Webots}{5}
-	 		\pointskill{}{SOFA}{2}
-
+    \pointskillNinety{}{JavaScript (ECMA 6)}
+    \pointskillNinety{}{TypeScript (3.2.4)}
+    \pointskillNinety{}{HTML (HTML 5)}
+    \pointskillNinety{}{CSS (Css3, Css 3D)}
+    \pointskillEighty{}{PHP (v7 et v5)}
+    \pointskillSeventy{}{Python (v2 et v3)}
+    \pointskillSixty{}{C\# (.NET Framework, Mono)}
+    \pointskillForty{}{Java (Fx, Swing, Maven)}
+    \pointskillFifty{}{C (cross-compilation)}
+    \pointskillForty{}{C++ (cross-compilation)}
+    \pointskillForty{}{QT (4 and 5)}
 }
 
 
