--- a/src/main.tex
+++ b/src/main.tex
@@ -81,27 +81,14 @@
 % email address
 \cvmail{hugo.machefer@gmail.com}
 
-% pgp key
-\cvkey{ORCID:0000-0002-2296-616X}{XXXX-YYYY-ZZZZ-MMMM} % put your actual ORCID here in the two brackets
+\cvlinkedin{linkedin.com/in/hugomachefer}{hugomachefer}
+
+\cvgithub{https://github.com/hmachefe}{hugomachefer}
+
+
 % add additional information
 % \newcommand{\additional}{some more?}
 
-
-%-------------------------------------------------------------------------------
-%                              SIDEBAR 1st PAGE
-%-------------------------------------------------------------------------------
-% overwrite default icons and order of personal information
-% \renewcommand{\personaltable}{%
-% 	\begin{personal}[0.8em]
-% 		\circleicon{\faKey}      & \cvkey  \\
-% 		\circleicon{\faAt}       & \cvmail \\
-% 		\circleicon{\faPhone}    & \cvphone \\
-% 		\circleicon{\faEnvelope} & \cvaddress \\
-% 		\circleicon{\faInfo}     & \cvbirthday \\
-% 		% add another line
-% 		\circleicon{\faQuestion} & \additional
-% 	\end{personal}
-% }
 
 % add more profile sections to sidebar on first page
 \addtofrontsidebar{
@@ -133,7 +120,7 @@
     \pointskillSeventy{}{Python (v2 et v3)}
     \pointskillSixty{}{C\# (.NET Framework, Mono)}
     \pointskillForty{}{Java (Fx, Swing, Maven)}
-    \pointskillFifty{}{C (cross-compilation)}
+    \pointskillFifty{}{C}
     \pointskillForty{}{C++ (cross-compilation)}
     \pointskillForty{}{QT (4 and 5)}
 }
