--- a/src/main.tex
+++ b/src/main.tex
@@ -72,10 +72,6 @@
 % job title/career
 \cvjobtitle{Full Stack Developer | Devops | Tech Lead }
 
-% date of birth
-\cvbirthday{\textbf{Date of Birth}: May. 5, 1974}
-% short address/location, use \newline if more than 1 line is required
-\cvaddress{5563 avenue de Darlington, H3T1T1 Montréal}
 % phone number
 \cvphone{001 514 659 0718}
 % email address
@@ -84,6 +80,9 @@
 \cvlinkedin{linkedin.com/in/hugomachefer}{hugomachefer}
 
 \cvgithub{https://github.com/hmachefe}{hugomachefer}
+
+% short address/location, use \newline if more than 1 line is required
+\cvaddress{5563 avenue de Darlington, H3T1T1 Montréal}
 
 
 % add additional information
@@ -102,27 +101,42 @@
 %   	\pointskill{\flag{GB.png}}{English}{3}
 %   	\pointskill{\flag{FR.png}}{French}{3}
 
-	\profilesection{Interests}
-		\skill{\faGraduationCap}{Soft Robotics}
-		\skill{\faGraduationCap}{Robotic Teleoperation}
-		\skill{\faGraduationCap}{Human-Robot Interaction}
-		\skill{\faGraduationCap}{Applied Intelligence}
-				\skill{\faGraduationCap}{Embedded Systems Design}
-
 
 	\profilesection{Skills}
-	\chartlabel{Languages:}\\
-    \pointskillNinety{}{JavaScript (ECMA 6)}
-    \pointskillNinety{}{TypeScript (3.2.4)}
-    \pointskillNinety{}{HTML (HTML 5)}
-    \pointskillNinety{}{CSS (Css3, Css 3D)}
-    \pointskillEighty{}{PHP (v7 et v5)}
-    \pointskillSeventy{}{Python (v2 et v3)}
-    \pointskillSixty{}{C\# (.NET Framework, Mono)}
-    \pointskillForty{}{Java (Fx, Swing, Maven)}
-    \pointskillFifty{}{C}
-    \pointskillForty{}{C++ (cross-compilation)}
-    \pointskillForty{}{QT (4 and 5)}
+    \chartlabel{Languages:}\\
+      \pointskillNinety{}{TypeScript, JavaScript}
+      \pointskillNinety{}{HTML (HTML 5)}
+      \pointskillNinety{}{CSS (Css3, Css 3D)}
+      \pointskillEighty{}{PHP (v7 et v5)}
+      \pointskillSeventy{}{Python (v2 et v3)}
+      \pointskillSixty{}{C\# (.NET Framework, Mono)}
+      \pointskillForty{}{Java (Fx, Swing, Maven)}
+      \pointskillForty{}{C/C++ (cross-compilation)}
+      \pointskillForty{}{QT (4 and 5)}
+    \chartlabel{Front-end (web):}\\
+      \pointskillNinety{}{Angular (9/10/14)}
+      \pointskillEighty{}{jQuery}
+      \pointskillSeventy{}{React}
+      \pointskillSeventy{}{RxJS / Observables}
+      \pointskillSeventy{}{SCSS / SASS}
+      \pointskillSixty{}{Bootstrap (Responsive)}
+      \pointskillFifty{}{Backbone}
+      \pointskillForty{}{VueJS}
+      \pointskillThirty{}{ThreeJS (3D)}
+    \chartlabel{Back-end:}\\
+      \pointskillNinety{}{OpenAPI/Swagger (TSOA)}
+      \pointskillSeventy{}{Express (Node.js)}
+      \pointskillSixty{}{Microservices (in Python)}
+      \pointskillSixty{}{Yii (PHP framework)}
+      \pointskillThirty{}{Django (Python framework)}
+      \pointskillThirty{}{Elixir (Robust scalability)}
+      \pointskillTwenty{}{LaTeX: (Typesetting)}
+    \chartlabel{Database:}\\
+      \pointskillNinety{}{DynamoDB / (MongoDB)}
+      \pointskillEighty{}{ElasticSearch}
+      \pointskillSeventy{}{PostGres}
+      \pointskillEighty{}{Sqlite (or MySql)}
+      \pointskillForty{}{Microsoft SQL Server}
 }
 
 
@@ -130,58 +144,74 @@
 %                              SIDEBAR 2nd PAGE
 %-------------------------------------------------------------------------------
 \addtobacksidebar{
-	\profilesection{Short Bio}
-	\aboutme{
- Dan has served on roughly thirty conference and workshop program committees and served as the Program Chair for PLDI 2018. He has served on the ACM SIGPLAN Executive Committee, the Steering Committee for the ACM / IEEE-CS 2013 Computer Science Curriculum, and the ACM Education Board. He currently serves on the CRA Board.}
 
-	\profilesection{Metrics}
-% 	\chartlabel{Bubble Diagram}
-	\begin{figure}\centering
-		\smartdiagram[bubble diagram]{\large
-% 			\textcolor{white}{\textbf{Being a}} \\
-% 			\textcolor{white}{\textbf{Panda}}, % center bubble
-			\textcolor{black!90}{h-index}\\
-			\textcolor{black!90}{\Large 4},
-			\textcolor{black!90}{Citations}\\
-			\textcolor{black!90}{25},
-			\textcolor{black!90}{RG Score}\\
-			\textcolor{black!90}{7.32},
-					\textcolor{black!90}{Publications}\\
-			\textcolor{black!90}{17}
-% 			\textcolor{black!90}{Playing},
-% 			\textcolor{black!90}{Chilling}
-		}
-	\end{figure}
 
-% 	\chartlabel{Wheel Chart}
+\chartlabel{AWS Cloud:}\\
+\pointskillNinety{}{EC2}
+\pointskillNinety{}{S3}
+\pointskillNinety{}{Lambdas}
+\pointskillNinety{}{Secrets Manager}
+\pointskillEighty{}{IAM}
+\pointskillEighty{}{CloudFront}
+\pointskillEighty{}{MediaConvert}
+\pointskillEighty{}{CloudWatch}
+\pointskillSeventy{}{Elastic Beanstalk}
+\pointskillSeventy{}{ECR}
+\pointskillSeventy{}{Step Functions}
+\pointskillTwenty{}{Fargate (ECS)}
+\pointskillEighty{}{Route53 (DNS)}
+\pointskillEighty{}{Certificates (ACM)}
 
-% 	\wheelchart{4em}{2em}{%
-%   	20/3em/maincolor!50/Chill,
-%   	15/3em/maincolor!15/Play,
-%   	30/4em/maincolor!40/Sleep,
-%   	20/3em/maincolor!20/Eat
-% 	}
-\profilesection{Profiles}
-\centering
-\href{https://www.linkedin.com/in/haithamelhussieny/}{\includegraphics[width=0.2\sidebartextwidth]{in.png}}\quad \href{https://www.researchgate.net/profile/Haitham_El-Hussieny}{\includegraphics[width=0.2\sidebartextwidth]{pics/rg.png}}\quad  \href{https://github.com/elhussieny}{\includegraphics[width=0.2\sidebartextwidth]{github.png}}
+\chartlabel{Azure Cloud:}\\
+\pointskillForty{}{Text To Speech Service}
+
+\chartlabel{DevOps:}\\
+\pointskillEighty{}{Terraform (IaC Multi-Cloud)}
+\pointskillSeventy{}{Kubernetes (Orchestration)}
+\pointskillFifty{}{CloudFormation (IaC AWS)}
+
+\chartlabel{HTML5 players:}\\
+\pointskillNinety{}{Bitmovin}
+\pointskillNinety{}{Accurate Player (Codemill)}
+\pointskillSeventy{}{Video.js (open source)}
+
+\chartlabel{Mobile Development:}\\
+\pointskillSixty{}{Java Android (Dalvik)}
+\pointskillForty{}{Ionic (Apache Cordova)}
+\pointskillThirty{}{Xcode (Objective C)}
+
 	\profilesection{Languages}
-	\barskill{}{\textbf{Arabic} (Mother Tongue)}{100}
-	\barskill{}{\textbf{English} (iBT:86, 2011)}{80}
-	\barskill{}{\textbf{Japanese} (Intro. course, 2016)}{20}
+	\barskill{}{\textbf{French} (Mother Tongue)}{100}
+	\barskill{}{\textbf{English} (TOEFL)}{95}
+	\barskill{}{\textbf{German} (Educational, 2 years)}{35}
+	\barskill{}{\textbf{Spanish} (Beginner, Duolingo)}{25}
 
 
-	\profilesection{Personal}
-	\begin{memberships}
- 		\membership{}{  Dan lives with his partner, a global public-health researcher, their two sons, born December 2013 and September 2015, and, because that clearly isn't enough chaos, a dog born some time in 2017. Prior to becoming a proud and obsessed dad, Dan enjoyed playing (poorly) and watching ice hockey, (road) bicycling, hiking, non-fiction, and enjoying good food, beer, and live theatre. Now he usually manages to read one book a month. }
- 	%	\membership{}{}
-	\end{memberships}
+	\profilesection{Interests}
+		\skill{\faLaptop}{Ai, WebGl/VR/AR, streaming}
+		\skill{\faFilm}{Movie, theather, cinema}
+		\skill{\faGlobe}{International geopolitics}
+		\skill{\faSwimmer}{Swimming, Basket-ball}
 
 
 }
 
 \addtothirdsidebar{
-\textbf{}\\
-\begin{turn}{-90}\chartlabel{Continuum Robots}\chartlabel{Growing Robots}\chartlabel{Shared Control}\chartlabel{Learning by Demonstrations}\chartlabel{Eye Gaze}\chartlabel{Mobile Robots}\chartlabel{Human-Robot Interaction}\chartlabel{Optimal Control}\end{turn}
+\chartlabel{AWS Cloud:}\\
+\pointskillNinety{}{EC2}
+\pointskillNinety{}{S3}
+\pointskillNinety{}{Lambdas}
+\pointskillNinety{}{Secrets }
+\pointskillEighty{}{IAM}
+\pointskillEighty{}{CloudFront}
+\pointskillEighty{}{MediaConvert}
+\pointskillEighty{}{CloudWatch}
+\pointskillSeventy{}{Elastic }
+\pointskillSeventy{}{ECR}
+\pointskillSeventy{}{Step }
+\pointskillTwenty{}{Fargate}
+\pointskillEighty{}{Route53 }
+\pointskillEighty{}{Certificates}
 
 }
 
@@ -324,23 +354,6 @@
 
 \newpage
 \makethirdsidebar
-\sidebarwidth=.08\paperwidth
-\newgeometry{right=1cm,left=2cm,bottom=0.1cm,top=1cm}
 
-\cvsection{Publications}
-\subsection{Journals}
-	\begin{itemize}
-	{\small
-	\item mmm}
-\end{itemize}
-\vskip20pt
- \subsection{Conferences}
-\begin{itemize}
-{\small
-\item ccc}
-		\end{itemize}
-%\end{cvtable}
-
-%\cvsignature
 
 \end{document}
