--- a/src/main.tex
+++ b/src/main.tex
@@ -95,15 +95,8 @@
 	% naming according to ISO 3166-1 alpha-2 country codes
 	\graphicspath{{pics/flags/}}
 
-% 	\profilesection{Languages}
-% 		\pointskill{\flag{CN.png}}{Chinese}{5}
-% 		\pointskill{\flag{DE.png}}{German}{3}
-%   	\pointskill{\flag{GB.png}}{English}{3}
-%   	\pointskill{\flag{FR.png}}{French}{3}
-
-
 	\profilesection{Skills}
-    \chartlabel{Languages:}\\
+    \chartlabel{Programmatic languages:}\\
       \pointskillNinety{}{TypeScript, JavaScript}
       \pointskillNinety{}{HTML (HTML 5)}
       \pointskillNinety{}{CSS (Css3, Css 3D)}
@@ -144,8 +137,7 @@
 %                              SIDEBAR 2nd PAGE
 %-------------------------------------------------------------------------------
 \addtobacksidebar{
-
-
+\vspace*{-6mm}  % Adjusts the vertical space, move content up by 10mm
 \chartlabel{AWS Cloud:}\\
 \pointskillNinety{}{EC2}
 \pointskillNinety{}{S3}
@@ -180,12 +172,44 @@
 \pointskillForty{}{Ionic (Apache Cordova)}
 \pointskillThirty{}{Xcode (Objective C)}
 
+
+\chartlabel{Version Control Systems:}\\
+\pointskillEighty{}{Git (gitlab, github)}
+\pointskillForty{}{SVN}
+\pointskillTwenty{}{Synergy}
+
+\chartlabel{Operating Systems:}\\
+\pointskillEighty{}{Linux (Ubuntu 22)}
+\pointskillSeventy{}{Windows (Win 10)}
+\pointskillFifty{}{Mac (El Capitan 10.11.2)}
+
+\chartlabel{IDE:}\\
+\pointskillNinety{}{Webstorm (Jetbrains)}
+\pointskillEighty{}{Visual Code Editor}
+\pointskillSeventy{}{Vim / Vi}
+
+
+\chartlabel{Agility:}\\
+\pointskillEighty{}{Jira (backlog, sprint)}
+\pointskillEighty{}{Confluence / wiki}
+\pointskillEighty{}{Scrum (grooming, review)}
+}
+
+\addtothirdsidebar{
+
+  \chartlabel{Instant messaging:}\\
+  \pointskillSeventy{}{Teams}
+  \pointskillEighty{}{Slack}
+
+  \chartlabel{UX / UI:}\\
+  \pointskillSeventy{}{Figma}
+  \pointskillSeventy{}{Miro}
+
 	\profilesection{Languages}
 	\barskill{}{\textbf{French} (Mother Tongue)}{100}
 	\barskill{}{\textbf{English} (TOEFL)}{95}
 	\barskill{}{\textbf{German} (Educational, 2 years)}{35}
 	\barskill{}{\textbf{Spanish} (Beginner, Duolingo)}{25}
-
 
 	\profilesection{Interests}
 		\skill{\faLaptop}{Ai, WebGl/VR/AR, streaming}
@@ -193,26 +217,13 @@
 		\skill{\faGlobe}{International geopolitics}
 		\skill{\faSwimmer}{Swimming, Basket-ball}
 
-
-}
-
-\addtothirdsidebar{
-\chartlabel{AWS Cloud:}\\
-\pointskillNinety{}{EC2}
-\pointskillNinety{}{S3}
-\pointskillNinety{}{Lambdas}
-\pointskillNinety{}{Secrets }
-\pointskillEighty{}{IAM}
-\pointskillEighty{}{CloudFront}
-\pointskillEighty{}{MediaConvert}
-\pointskillEighty{}{CloudWatch}
-\pointskillSeventy{}{Elastic }
-\pointskillSeventy{}{ECR}
-\pointskillSeventy{}{Step }
-\pointskillTwenty{}{Fargate}
-\pointskillEighty{}{Route53 }
-\pointskillEighty{}{Certificates}
-
+	\profilesection{Short Bio}
+	\aboutme{
+With over 26 years of experience in developing and delivering web applications for digital TV and media platforms, as well as for laptops and mobile devices, I have overseen the architecture, development, and deployment of two major web projects involving Azure. \\
+Collaborating closely with a team of four developers and one QA specialist, \\
+I focus on enhancing and consolidating our software stack, creating modules, and conducting code reviews.\\
+In my role as a tech lead, I also uphold best practices in agile methodologies, backlog management, and documentation. \\
+Passionate about web innovation, I am committed to solving complex problems and delivering user-friendly, scalable solutions for our clients, utilizing cutting-edge technologies such as AWS, Angular, Vue.js, React, PHP, and HTML5}\\
 }
 
 %-------------------------------------------------------------------------------
@@ -354,6 +365,19 @@
 
 \newpage
 \makethirdsidebar
+
+\cvsection{Publications}
+\subsection{Journals}
+	\begin{itemize}
+	{\small
+	\item mmm}
+\end{itemize}
+\vskip20pt
+ \subsection{Conferences}
+\begin{itemize}
+{\small
+\item ccc}
+		\end{itemize}
 
 
 \end{document}
