--- a/src/main.tex
+++ b/src/main.tex
@@ -205,6 +205,10 @@
   \pointskillSeventy{}{Figma}
   \pointskillSeventy{}{Miro}
 
+  \chartlabel{AI:}\\
+  \pointskillEighty{}{Chatgpt 4.0}
+  \pointskillSixty{}{OpenAI API}
+
 	\profilesection{Languages}
 	\barskill{}{\textbf{French} (Mother Tongue)}{100}
 	\barskill{}{\textbf{English} (TOEFL)}{95}
@@ -219,11 +223,11 @@
 
 	\profilesection{Short Bio}
 	\aboutme{
-With over 26 years of experience in developing and delivering web applications for digital TV and media platforms, as well as for laptops and mobile devices, I have overseen the architecture, development, and deployment of two major web projects involving Azure. \\
-Collaborating closely with a team of four developers and one QA specialist, \\
-I focus on enhancing and consolidating our software stack, creating modules, and conducting code reviews.\\
-In my role as a tech lead, I also uphold best practices in agile methodologies, backlog management, and documentation. \\
-Passionate about web innovation, I am committed to solving complex problems and delivering user-friendly, scalable solutions for our clients, utilizing cutting-edge technologies such as AWS, Angular, Vue.js, React, PHP, and HTML5}\\
+With over 26 years of experience in developing and delivering web applications for digital TV and media platforms, as well as for laptops and mobile devices, I have overseen the architecture, development, and deployment of two major web projects involving Azure. \\\\
+Collaborating closely with a team of four developers and one QA specialist, \\\\
+I focus on enhancing and consolidating our software stack, creating modules, and conducting code reviews.\\\\
+In my role as a tech lead, I also uphold best practices in agile methodologies, backlog management, and documentation. \\\\
+Passionate about web innovation, I am committed to solving complex problems and delivering user-friendly, scalable solutions for our clients, utilizing cutting-edge technologies such as AWS, Angular, Vue.js, React, PHP, Python, and HTML5}, with a slice of AI\\
 }
 
 %-------------------------------------------------------------------------------
