--- a/src/main.tex
+++ b/src/main.tex
@@ -141,11 +141,10 @@
 \chartlabel{AWS Cloud:}\\
 \pointskillNinety{}{EC2}
 \pointskillNinety{}{S3}
-\pointskillNinety{}{Lambdas}
+\pointskillNinety{}{Lambdas (layer)}
 \pointskillNinety{}{Secrets Manager}
 \pointskillEighty{}{IAM}
-\pointskillEighty{}{CloudFront}
-\pointskillEighty{}{MediaConvert}
+\pointskillEighty{}{CloudFront (CDN)}
 \pointskillEighty{}{CloudWatch}
 \pointskillSeventy{}{Elastic Beanstalk}
 \pointskillSeventy{}{ECR}
@@ -167,6 +166,11 @@
 \pointskillNinety{}{Accurate Player (Codemill)}
 \pointskillSeventy{}{Video.js (open source)}
 
+\chartlabel{Multimedia:}\\
+\pointskillNinety{}{FFMPEG}
+\pointskillNinety{}{AWS MediaConvert}
+\pointskillSeventy{}{Hybrik}
+
 \chartlabel{Mobile Development:}\\
 \pointskillSixty{}{Java Android (Dalvik)}
 \pointskillForty{}{Ionic (Apache Cordova)}
@@ -175,8 +179,7 @@
 
 \chartlabel{Version Control Systems:}\\
 \pointskillEighty{}{Git (gitlab, github)}
-\pointskillForty{}{SVN}
-\pointskillTwenty{}{Synergy}
+\pointskillForty{}{SVN / Synergy}
 
 \chartlabel{Operating Systems:}\\
 \pointskillEighty{}{Linux (Ubuntu 22)}
@@ -196,6 +199,7 @@
 }
 
 \addtothirdsidebar{
+\vspace*{-6mm}  % Adjusts the vertical space, move content up by 10mm
 
   \chartlabel{Instant messaging:}\\
   \pointskillSeventy{}{Teams}
@@ -223,11 +227,7 @@
 
 	\profilesection{Short Bio}
 	\aboutme{
-With over 26 years of experience in developing and delivering web applications for digital TV and media platforms, as well as for laptops and mobile devices, I have overseen the architecture, development, and deployment of two major web projects involving Azure. \\\\
-Collaborating closely with a team of four developers and one QA specialist, \\\\
-I focus on enhancing and consolidating our software stack, creating modules, and conducting code reviews.\\\\
-In my role as a tech lead, I also uphold best practices in agile methodologies, backlog management, and documentation. \\\\
-Passionate about web innovation, I am committed to solving complex problems and delivering user-friendly, scalable solutions for our clients, utilizing cutting-edge technologies such as AWS, Angular, Vue.js, React, PHP, Python, and HTML5}, with a slice of AI\\
+With over 26 years of experience in web development for digital TV, media platforms, and mobile devices, I have led the architecture, development, and deployment of two major Azure-based projects. My role involves collaborating with a team of developers and a QA specialist to enhance our software stack through module creation, code reviews, and the implementation of agile practices. I am passionate about innovating web solutions that are user-friendly and scalable, leveraging technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI.}\\
 }
 
 %-------------------------------------------------------------------------------
@@ -256,7 +256,11 @@ Passionate about web innovation, I am committed to solving complex problems and 
 
 \cvsection{Working Experience}
 \begin{cvtable}
-    \cvitem{Aug, 2019 -- ongoing}{\color{cvsectioncolor}Senior Research Fellow}{\textbf{University of Salford, UK}}{Working as a Senior Research Fellow in Soft Robotics at the University of Salford. Major research area includes control of pneumatic actuators and soft grippers.}
+    \cvitem{Aug, 2020 -- ongoing}{\color{cvsectioncolor}Senior Research Fellow}
+    {\textbf{(Tech lead), Montreal}}
+    {
+      Working as a Senior Research Fellow in Soft Robotics at the University of Salford. Major research area includes control of pneumatic actuators and soft grippers.
+    }
 
 	\cvitem{Sep, 2016 -- ongoing}{\color{cvsectioncolor}Assistant Professor\quad (currently onleave)}{\textbf{Benha Univ., Egypt}}{Assistant Professor of Robotics Engineering at Electrical Engineering Department, Faculty of Engineering (Shoubra), Benha University. }
 
