--- a/src/main.tex
+++ b/src/main.tex
@@ -256,26 +256,22 @@ With over 26 years of experience in web development for digital TV, media platfo
 
 \cvsection{Working Experience}
 \begin{cvtable}
-    \cvitem{Aug, 2020 -- ongoing}{\color{cvsectioncolor}Senior Research Fellow}
-    {\textbf{(Tech lead), Montreal}}
+    \cvitem{Aug,\\2020\\–\\now}
+    {Full stack developer (and devops) at Difuze}
+    {(Tech lead), Montreal}
     {
-      Working as a Senior Research Fellow in Soft Robotics at the University of Salford. Major research area includes control of pneumatic actuators and soft grippers.
+      \textbf{Role}: Consolidating our software stack required by Difuze, formerly Technicolor Montreal. Involved in architecture decisions, contributed to modules development, components creation, including code reviews through gitlab, pro-actively following back-log across Jira, arranging / creating / prioritizing tickets, writing documentation over Confluence.\\
+      \textbf{Context}: B2B with www.difuzego.com as the main product, handling media asset management, screeners, and delivery.\\
+      \textbf{Purpose}: Media Asset Management, screeners (promotional video links), delivery (orders)\\
+      \textbf{Tech Areas}: Expertise in Front-end and Back-end development, tasks scheduling (cron jobs), and primarily DevOps.\\
+      % Continue with the rest of your text
     }
-
-	\cvitem{Sep, 2016 -- ongoing}{\color{cvsectioncolor}Assistant Professor\quad (currently onleave)}{\textbf{Benha Univ., Egypt}}{Assistant Professor of Robotics Engineering at Electrical Engineering Department, Faculty of Engineering (Shoubra), Benha University. }
-
-	\cvitem{Sep, 2018 -- Aug, 2019}{\color{cvsectioncolor}Adjunct Assistant Professor}{\textbf{E-JUST Univ., Egypt}}{Working as an Adjunct Assistant Professor for one day/week at Mechatronics and Robotics Engineering Department, Egypt-Japan University of Science and Technology (E-JUST), Egypt.}
-
-	\cvitem{May, 2017 -- Jun, 2018}{\color{cvsectioncolor}Post-Doc Fellow}{\textbf{KOREATECH Univ., S. Korea}}{Worked on soft haptic for soft robots research and involved in a collaboration project with \href{http://charm.stanford.edu/}{CHARM Lab., Stanford University} with title “Human-Centered Design and Control of Vine Robots for Disaster Scenarios".}
-
-	\cvitem{Oct, 2016 -- Feb, 2017}{\color{cvsectioncolor}Adjunct Assistant Professor}{\textbf{Zewail City Univ., Egypt}}{Worked as a part-time Adjunct Assistant Professor at Aerospace Engineering Department for two days/week. Delivering an undergraduate course (SPC 318: System Modeling and Linear Systems).}
-
-	\cvitem{Sep, 2015 -- May, 2016}{\color{cvsectioncolor}Visiting Researcher}{\textbf{NAIST Univ., Japan}}{Conducted experiments with KUKA LWR iiwa R820 robot manipulator and doing research on eye-gaze input interface in HRI applications.}
-
-	\cvitem{Jul, 2008 -- Sep, 2011}{\color{cvsectioncolor}Teaching Assistant}{\textbf{Benha Univ., Egypt}}{Worked as a full-time Teaching Assistant at the Electrical Engineering Department, Faculty of Engineeing (Shoubra), Benha University to help in teaching courses in electronics and robotics subjects.}
-
-	\cvitem{Jul, 2008 -- Sep, 2011}{\color{cvsectioncolor}Embedded Systems Engineer}{\textbf{Egytronix Co., Egypt}}{Worked as a part-time embedded systems engineer (four days/week) in the field of power electronics applications and embedded systems design.}
 \end{cvtable}
+
+
+
+
+
 
 
 \cvsection{Education}
@@ -295,26 +291,8 @@ With over 26 years of experience in web development for digital TV, media platfo
 \end{cvtable}
 
 
-\subsection{Undergraduate Study}
-\begin{cvtable}
-\cvitem{2002 -- 2007}{\color{cvsectioncolor}\small B.Sc. in Electronics and Communications Engineering}{\href{http://bu.edu.eg/en/}{\textbf{Benha Univ., Egypt}}}
-		{\textbf{Prject Title}: A Mototrized Wheelchair for Handicapped.\\
-		\textbf{Supervisors}: Dr. Asharaf Hafez\\
-		\textbf{Grade: } Very Good (Ranked 3rd. among 200 students)}
-	\end{cvtable}
 
-\subsection{Other Training}
-\begin{cvtable}
-\cvitem{May 2005}{\color{cvsectioncolor}\small Embedded Systems Diploma}{\textbf{Jelecom Co., Egypt}}
-		{Training on microcontrollers: 8051, AVR, PIC and Motorola.}
-	\end{cvtable}
 
-% 	Ph.D. Theses: (Two students)
-% { . (2018 - 2020)
-% {  (2018 - 2020)
-% M.Sc. Theses: (Two students)
-% { An Intutive Input Interface for teloperation of a Multi-section Continuum Robot. (2019-2021)
-% {  (2019-2021)
 \newpage
 \makebacksidebar
 \cvsection{Teaching Experience}
